--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,9 @@ web_modules/
 
 # dotenv environment variable files
 .env
+.env.test
+.env.dev
+.env.prod
 .env.development.local
 .env.test.local
 .env.production.local
