--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@nestjs/graphql": "^9.1.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.7",
     "apollo-server-express": "^3.6.1",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "graphql": "^15.8.0",
     "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
